--- a/compose.yaml
+++ b/compose.yaml
@@ -24,10 +24,17 @@ services:
       dockerfile: Dockerfile
     image: ghcr.io/open-webui/open-webui:main
     container_name: open-webui
+    pull_policy: "always"
     volumes:
       - ./open-webui:/app/backend/data
     depends_on:
       - ollama
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              capabilities: [gpu]
     ports:
       - ${OWUI_PORT}:8080
     environment:
