--- a/compose.yaml
+++ b/compose.yaml
@@ -29,12 +29,12 @@ services:
       - ./open-webui:/app/backend/data
     depends_on:
       - ollama
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              capabilities: [gpu]
+    #deploy:
+    #  resources:
+    #    reservations:
+    #      devices:
+    #        - driver: nvidia
+    #          capabilities: [gpu]
     ports:
       - ${OWUI_PORT}:8080
     environment:
