--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,8 @@ services:
               capabilities: [gpu]
     ports:
       - ${OLLAMA_PORT}:11434
+    environment:
+      OLLAMA_CONTEXT_LENGTH: 16000
     volumes:
       - ./ollama:/root/.ollama/
     tty: true
